# fri3d-wasm-badge

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  MIGRATION_PLAN.md  PLAN-zig-migration.md  README.md  build.zig  build_all.sh  build_apps.sh  build_desktop.sh  build_emulator.sh  build_trace_tests.sh  build_web.sh  c_build_web.sh  test.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/flash/: SKILL.md
.github/workflows/: deploy-pages.yml  parity.yml  rust-tests.yml  trace-tests.yml  visual-tests.yml
apps/circles/: Cargo.toml
apps/circles/src/: lib.rs
apps/launcher/: Cargo.toml
apps/launcher/src/: lib.rs
apps/mandelbrot/: Cargo.toml
apps/mandelbrot/src/: lib.rs
apps/test-drawing/: Cargo.toml
apps/test-drawing/src/: lib.rs
apps/test-ui/: Cargo.toml
apps/test-ui/src/: lib.rs
cmake/: toolchain-wasm.cmake  zig-c++  zig-cc
crates/fri3d-png/: Cargo.toml
crates/fri3d-png/src/: lib.rs
crates/fri3d-runtime/: Cargo.toml
crates/fri3d-runtime/src/: canvas.rs  font.rs  input.rs  lib.rs  random.rs
crates/fri3d-sdk/: Cargo.toml
crates/fri3d-sdk/src/: canvas.rs  input.rs  lib.rs  random.rs
crates/fri3d-wasm/: Cargo.toml
crates/fri3d-wasm/src/: app.rs  host.rs  lib.rs
docs/: developing_apps.md  imgui.md  input_system.md
firmware/: .gitignore  README.md  platformio.ini
firmware/lib/wasm3/: library.json
firmware/scripts/: embed_app.sh  embed_apps.sh
firmware/src/: Fri3dBadge_Button.cpp  Fri3dBadge_Button.h  Fri3dBadge_pins.h  app_switcher.cpp  app_switcher.h  canvas.cpp  canvas.h  font.cpp  font.h  fonts.h  host_platform.h  input_queue.cpp  input_queue.h  main.cpp  random.cpp  random.h  screen.cpp  screen.h  wasm_host.cpp  wasm_host.h
firmware/tools/app-runner/: .gitignore  app_runner.cpp  build.sh  visual_parity.sh
firmware/tools/canvas-parity/: .gitignore  canvas_parity.cpp  run.sh
firmware/tools/hosttest/: hosttest.c
firmware/tools/input-queue-test/: test.cpp
firmware/web/: build.sh  index.html  main_web.cpp  test.html  tests.js
fri3d-app-circles/: Cargo.toml
fri3d-app-circles/src/: lib.rs
fri3d-app-dots/: Cargo.toml
fri3d-app-dots/src/: lib.rs
fri3d-app-launcher/: Cargo.toml
fri3d-app-launcher/src/: lib.rs
fri3d-app-mandelbrot/: Cargo.toml
fri3d-app-mandelbrot/src/: lib.rs
fri3d-app-snake/: Cargo.toml
fri3d-app-snake/src/: lib.rs
fri3d-app-test-drawing/: Cargo.toml
fri3d-app-test-drawing/src/: lib.rs
fri3d-app-test-ui/: Cargo.toml
fri3d-app-test-ui/src/: lib.rs
fri3d-app-wifi-pet/: Cargo.toml
fri3d-app-wifi-pet/src/: lib.rs
fri3d-emulator/: Cargo.toml
fri3d-emulator/src/: main.rs
fri3d-runtime/: Cargo.toml
fri3d-runtime/src/: app_manager.rs  canvas.rs  font.rs  fonts.rs  input.rs  lib.rs  random.rs  trace.rs  types.rs  wasm_runner.rs
fri3d-trace-harness/: Cargo.toml
fri3d-trace-harness/src/: main.rs
fri3d-wasm-api/: Cargo.toml
fri3d-wasm-api/src/: imgui.rs  lib.rs  ui.rs
fri3d-web/: Cargo.toml  shell.html
fri3d-web/src/: lib.rs
plans/: c_migration_and_stb_swap.md
ports/desktop/: Cargo.toml
ports/desktop/src/: main.rs
ports/esp32/: Cargo.toml
ports/esp32/src/: main.rs
ports/web/: Cargo.toml
ports/web/src/: lib.rs
ports/web/www/: index.html  main.js  style.css
scripts/: update_golden_screenshots.py
specs/: 001-basics.md  002-platforms.md  003-runtime.md  004-canvas.md  005-apps-core.md  006-tests.md  007-imgui.md  008-apps-imgui.md  009-launcher.md  010-rust-rewrite.md  011-testing.md  012-esp32-next-steps.md  013-storage.md  014-aot-compilation.md  c_migration_and_stb_swap.md  trace_integration_tests.md  virtual_keyboard.md
src/app/: CMakeLists.txt  canvas.c  canvas.h  frd.h  frd_os.c  input.h  main.c  random.c  random.h  viewport.c  viewport.h
src/apps/circles/: CMakeLists.txt  main.c  main.zig
src/apps/circles_zig/: main.zig
src/apps/launcher/: CMakeLists.txt  main.c  main.zig
src/apps/mandelbrot/: CMakeLists.txt  main.c  main.zig
src/apps/snake/: CMakeLists.txt  main.c
src/apps/test_drawing/: CMakeLists.txt  main.c
src/apps/test_ui/: CMakeLists.txt  main.c  main.zig
src/apps/test_ui_zig/: main.zig
src/emulator/: CMakeLists.txt  display_sdl.c  display_sdl.cpp  display_sdl.h  input_sdl.c  input_sdl.cpp  input_sdl.h  lodepng_c.c  main.c  main.cpp
src/firmware/: README.md  platformio.ini
src/firmware/include/: display_spi.h  input_gpio.h
src/firmware/src/: display_spi.c  display_spi.cpp  input_gpio.c  input_gpio.cpp  main.c  main.cpp
src/host/: CMakeLists.txt  main.cpp
src/ports/desktop/: main.zig
src/ports/emulator/: main.zig
src/ports/web/: index.html  platform.js
src/runtime/: CMakeLists.txt  app_manager.c  app_manager.cpp  app_manager.h  canvas.c  canvas.cpp  canvas.h  canvas.zig  display.h  imgui.zig  input.c  input.cpp  input.h  platform.zig  random.c  random.cpp  random.h  trace.c  trace.h  wasm_runner.c  wasm_runner.cpp  wasm_runner.h
src/sdk/: app.h  canvas.h  frd.h  imgui.c  imgui.h  input.h  random.h
src/sdk/zig/: canvas.zig  imgui.zig  platform.zig
src/web/: CMakeLists.txt  main.c  main.cpp  shell.html
tests/trace/: README.md  run_trace_tests.py
tests/trace/expected/snake/: initial.json
tests/trace/harness/: CMakeLists.txt  jsmn.c  jsmn.h  trace_harness.c
tests/trace/specs/circles/: basic.json
tests/trace/specs/mandelbrot/: exit_long.json
tests/trace/specs/snake/: initial.json  timer.json
tests/visual/: .gitignore  README.md  requirements.txt  run_visual_tests.py
tests/visual/golden/: .gitkeep  checkerboard.ppm  circles.ppm  diagonal_lines.ppm  filled_circles.ppm  filled_rectangles.ppm  horizontal_lines.ppm  mixed_primitives.ppm  random_pixels.ppm  rectangles.ppm  rounded_rectangles.ppm  text_rendering.ppm  vertical_lines.ppm
tests/web/: package.json  run_web_smoke_tests.js
tools/: transpile_fonts.py
tools/canvas-parity-gen/: Cargo.toml
tools/canvas-parity-gen/src/: main.rs
tools/visual-golden-gen/: Cargo.toml  regen.sh
tools/visual-golden-gen/src/: main.rs
zig/: README.md
zig/apps/circles/: main.zig
zig/sdk/: platform.zig
(+11 files in other folders)
