[workspace]
members = [
    # Parity reference: C++ in firmware/src/canvas.cpp must stay byte-exact
    # with this implementation (see tools/canvas-parity-gen).
    "fri3d-runtime",
    # App SDK — the 24-function host ABI that every app compiles against.
    "fri3d-wasm-api",
    # Apps — all compile to wasm32-unknown-unknown.
    "fri3d-app-circles",
    "fri3d-app-dots",
    "fri3d-app-launcher",
    "fri3d-app-mandelbrot",
    "fri3d-app-snake",
    "fri3d-app-test-drawing",
    "fri3d-app-test-ui",
    "fri3d-app-wifi-pet",
    # Golden-image generator for canvas primitives.
    "tools/canvas-parity-gen",
]
default-members = [
    "fri3d-runtime",
    "fri3d-wasm-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
